<resources>
    <string name="app_name">Mafia</string>
    <string name="create_serv">open server</string>
    <string name="connect_to_serv">find server</string>
    <string name="yourn">your name</string>
    <string name="servn">server name</string>
    <string name="ok">ok</string>
    <string name="cansel">cansel</string>
    <string name="name">name</string>
    <string name="join">join!</string>
    <string name="players">players</string>
    <string name="entername">enter name please!</string>
    <string name="serventername">enter server name please!</string>
    <string name="nowifi">connect to wifi please!</string>
    <string name="back">back</string>
    <string name="servers">found servers:</string>
    <string name="start">start</string>
    <string name="connecting">connecting</string>
    <string name="connect">connect</string>
    <string name="cooner">connection error!</string>
    <string name="gamews">game was all reade stared</string>
    <string name="exit">exit</string>
    <string name="areyou">are you sure?</string>
    <string name="needfor">need 4 or more people</string>
    <string name="roles">roles</string>
    <string name="innocents">innocents</string>
    <string name="detective">detective</string>
    <string name="doctorandbar">doctor and barman</string>
    <string name="defaul">default</string>
    <string name="mfshude">the mafia must be in the game!</string>
    <string name="toomach">too much mafia!</string>
    <string name="password">password</string>
    <string name="kill_him">kill him:</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="my_role">my role</string>
    <string name="kill_me">kill me:</string>
    <string name="hide_screen">Hide the screen from other players!</string>
</resources>
