<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <Button
        android:text="@string/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/join"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerscount"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="24sp"
            android:text="8"
            android:textAllCaps="false"
            android:textStyle="normal|bold" />

    </LinearLayout>
</LinearLayout>